# LCHQMDriver

./: .gitattributes  .gitignore  ANALYSIS_MIGRATION.md  CLAUDE.md  Dockerfile  README.md  calibration_db.json  calibration_links.toml  create_calibration_links.py  debug_05_T1.py  debug_LCH_Ramsey.py  official_sync.json  pyproject.toml  qm-instrument_config_2025-08-27_15-25-56.html  qm-instrument_config_2026-02-21_15-45-41.html  qm-instrument_config_2026-02-21_15-52-20.html  qm-instrument_config_2026-02-21_15-55-59.html  qm-instrument_config_2026-02-21_15-59-27.html  qm-instrument_config_2026-02-21_16-00-35.html  qm-instrument_config_2026-03-04_18-39-24.html  qm-instrument_config_2026-03-04_18-45-45.html  qm-instrument_config_2026-03-28_23-29-31.html  qm-instrument_config_2026-03-28_23-31-24.html  qm-instrument_config_2026-03-28_23-37-16.html  qm.bat  qm.command  qua_config.json  requirements-qm.lock.txt  setup_qualibrate_config.bat  start_server.bat  sync_official.py
.claude/: settings.json
.github/: copilot-instructions.md
calibration_utils/: T1  T2echo  chevron_cz  cryoscope  cz_conditional_phase  cz_conditional_phase_error_amp  cz_phase_compensation  drag_calibration_180_minus180  hello_qua  iq_blobs  iq_blobs_ef  mixer_calibration  pi_flux  power_rabi  qubit_spectroscopy  qubit_spectroscopy_vs_flux  rabi_chevron  ramsey  ramsey_versus_flux_calibration  readout_frequency_optimization  readout_gef_frequency_optimization  readout_optimization_3d  readout_power_optimization  resonator_spectroscopy  resonator_spectroscopy_vs_amplitude  resonator_spectroscopy_vs_flux  single_qubit_randomized_benchmarking  single_qubit_randomized_benchmarking_interleaved  stark_detuning_calibration  time_of_flight  time_of_flight_mw  xyx_delay
calibrations/: 00_close_other_qms.py  00_hello_qua.py  00x_close_specific_qm.ipynb  01a_mixer_calibration.py  01a_time_of_flight.py  01b_time_of_flight_mw_fem.py  02a_resonator_spectroscopy.py  02b_resonator_spectroscopy_vs_power.py  02c_resonator_spectroscopy_vs_flux.py  02d_as_resonator_spectroscopy_vs_oneflux.py  02d_resonator_spectroscopy_vs_oneflux.py  03a_qubit_spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  04a_rabi_chevron.py  04b_power_rabi.py  05_T1.py  06a_ramsey.py  06b_echo.py  07_iq_blobs.py  08a_readout_frequency_optimization.py  08b_readout_power_optimization.py  09_ramsey_vs_flux_calibration.py  10b_drag_calibration_180_minus_180.py  11a_single_qubit_randomized_benchmarking.py  11b_single_qubit_randomized_benchmarking_interleaved.py  12_Qubit_Spectroscopy_E_to_F.py  13_power_rabi_ef.py  15_iq_blobs_gef.py  (+90 more)
(+366 files in other folders)
