[project]
name = "superconducting-calibrations"
version = "0.1.0"
description = "QM Superconducting Calibration Graphs"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "quam>=0.5.0a1",
    "qualang-tools>=0.19.0",
    "qualibrate>=1.0.2",
    "qm-qua>=1.2.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "quam-builder@git+https://github.com/qua-platform/quam-builder.git",
    "qualibration-libs@git+https://github.com/qua-platform/qualibration-libs.git",
    "xarray>=2024.7.0",
    "plotly>=5.24.1",
    "lmfit>=1.3.3",
    "scipy>=1.13.1",
    "qiskit-experiments>=0.9.0",
    "tqdm>=4.67.1",
    "qiskit<2.0",
]

# The scqo integration (customized/scqo/) is optional: the qualibrate calibration
# nodes never import scqo, so the core install stays QM-only. Install with the extra
# (`pip install -e .[scqo]`) to use the QMBackend / scqo experiments.
[project.optional-dependencies]
scqo = ["scqo"]

# Advertise the QM scqo experiments so Session.catalog() finds them without a manual
# import. Loading needs the `scqo` extra installed; scqo's discovery skips this entry
# gracefully when it (or the QM stack) is absent.
[project.entry-points."scqo.experiments"]
lchqm = "customized.scqo.experiments"

# Advertise the QM BACKEND factory to the scqo CLI: `backend = "qm"`/"qm_sim" in the
# lab config resolves to this (needs scqo >= 0.4.0; re-run `uv pip install -e` after
# adding — entry points register at install time, not import time).
[project.entry-points."scqo.backends"]
qm = "customized.scqo.backend_factory:build_backend"

[tool.uv.sources]
scqo = { path = "../SCQO", editable = true }

[tool.black]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=7.0.0a1", "pytest>=8.3.5"]

[tool.hatch.build.targets.wheel]
packages = ["calibrations", "calibration_utils", "quam_config", "customized"]

[tool.hatch.metadata]
allow-direct-references = true
# [tool.uv.sources]
# quam-builder = { git = "https://github.com/qua-platform/quam-builder.git" }
# qualibration-libs = { git = "https://github.com/qua-platform/qualibration-libs.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]   # never collect calibrations/ (qualibrate nodes execute at import; exclude/ has *_test.py names)
